--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Appin is a simple framework to design and evaluate user interfaces for touch 
-enabled phone using simple web techniques.
+enabled phones using simple web techniques.
 
 Except for jQuery the following applies:
 
